Fix page jump

--- a/packages/nouns-webapp/src/components/Auction/Auction.module.css
+++ b/packages/nouns-webapp/src/components/Auction/Auction.module.css
@@ -10,7 +10,7 @@
 .auctionActivityCol {
   padding-right: 5rem;
   padding-bottom: 0rem;
-  min-height: 520px;
+  min-height: 558px;
   align-self: flex-end !important;
 }
 
